--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -7,6 +7,8 @@ ru:
       organization: Организация
       activity: Кружки
       expert: Экспертный совет
+      metro_station: Станция метро
+      attach: Фотография
     attributes:
       organization:
         title: Название
@@ -21,8 +23,13 @@ ru:
         users_rating: Рейтинг пользователей
         experts_rating: Рейтинг экспертов
         organization: Организация
+        metro_station: Станция метро
       expert:
         name: Имя
         description: Описание
         created_at: Дата создания
         updated_at: Дата обновления
+      activity_photo:
+        attach: Фотография
+      video_url:
+        url: Ссылка на видео
