work with admin activity

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,6 +19,11 @@ ru:
         few: Конкурса
         many: Конкурсов
         other: Конкурсы
+      activity:
+        one: Кружок
+        few: Кружка
+        many: Кружков
+        other: Кружки
     attributes:
       organization:
         title: Название
