--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -42,6 +42,8 @@ ru:
       expert:
         name: Имя
         description: Описание
+        about: Биография
+        photo: Фотография
         created_at: Дата создания
         updated_at: Дата обновления
       activity_photo:
