tiny fix admin/users/new

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -96,6 +96,8 @@ ru:
         description: Описание
         about: Биография
         avatar: Фотография
+        role: Роль
+        password: Пароль
         created_at: Дата создания
         updated_at: Дата обновления
       activity_photo:
