fix admin article

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -69,6 +69,7 @@ ru:
         created_at: Дата создания
         updated_at: Дата обновления
         picture: Лого
+        published: Опубликовать
       activity_comment:
         commentator: Комментатор
         content: Контент
