--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -1,6 +1,16 @@
 ru:
   activerecord:
     models:
+      region:
+        one: Регион
+        few: Региона
+        many: Регионы
+        other: Регионы
+      metro_station:
+        one: Станция метро
+        few: Станции метро
+        many: Станции метро
+        other: Станции метро
       special_project:
         one: Специальный проэкт
         few: Специальных проэкта
@@ -73,6 +83,8 @@ ru:
       activity_comment:
         commentator: Комментатор
         content: Контент
+        picture: Картинка
+        is_parent: Родительский
       news:
         title: Название
         author: Автор
@@ -90,6 +102,7 @@ ru:
         created_at: Дата создания
         updated_at: Дата обновления
       activity:
+        replace_teacher_text: Текст вместо учитилей
         title: Название
         address: Адрес
         description: Описание
@@ -131,6 +144,16 @@ ru:
         created_at: Дата создания
         updated_at: Дата обновления
         activity: Кружок
+        description: Описание
+        photo: Фотография
       special_project:
         title: Название
         author: Автор
+      region:
+        title: Название
+        created_at: Дата создания
+        updated_at: Дата обновления
+      metro_station:
+        title: Название
+        created_at: Дата создания
+        updated_at: Дата обновления
