fix /admin/special_project/:id add html editor and author

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -150,6 +150,9 @@ ru:
       special_project:
         title: Название
         author: Автор
+        content: Контент
+        picture: Картинка
+        special_project_tag_list: Тэги
       region:
         title: Название
         created_at: Дата создания
