add to /admin/activities/new phone, site, is_eduction

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -102,6 +102,12 @@ ru:
         created_at: Дата создания
         updated_at: Дата обновления
       activity:
+        is_educational: Образовательный
+        logo: Логотип
+        direction_tags: Категории
+        age_tags: Возрастные категории
+        site: Сайт
+        phone: Телефон
         published: Опубликовать
         replace_teacher_text: Текст вместо учитилей
         title: Название
