--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -1,6 +1,11 @@
 ru:
   activerecord:
     models:
+      picture:
+        one: Картинка
+        few: Картинки
+        many: Картинок
+        other: Картинки
       region:
         one: Регион
         few: Региона
@@ -165,5 +170,10 @@ ru:
         updated_at: Дата обновления
       metro_station:
         title: Название
+        created_at: Дата создания
+        updated_at: Дата обновления
+      picture:
+        picture: Картинка
+        caption: Название
         created_at: Дата создания
         updated_at: Дата обновления
