add to /admin/articles best field and fix raw article.short_description

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -85,6 +85,7 @@ ru:
         other: Новости
     attributes:
       article:
+        best: Лучшие
         title: Название
         author: Автор
         biography: Биография
