--- a/config/locales/active_admin.ru.yml
+++ b/config/locales/active_admin.ru.yml
@@ -11,3 +11,4 @@ ru:
       usuals: Обычные пользователи
       published: Опубликованные
       not_published: Не опубликованные
+      bests: Лучшие
