--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -163,6 +163,11 @@ ru:
       contest:
         name: Название
         category: Категория
+        description: Описание
+        rules: Правила
+        picture: Логотип
+        started_at: Дата начала
+        ended_at: Дата окончания
       teacher:
         name: Имя
         created_at: Дата создания
