display :active field in admin panel for contests

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -168,6 +168,7 @@ ru:
         picture: Логотип
         started_at: Дата начала
         ended_at: Дата окончания
+        active: Активен
       teacher:
         name: Имя
         created_at: Дата создания
