--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -136,6 +136,7 @@ ru:
         replace_teacher_text: Текст вместо учитилей
         title: Название
         address: Адрес
+        address_dummy: Заглушка для адреса
         description: Описание
         users_rating: Рейтинг пользователей
         experts_rating: Рейтинг экспертов
@@ -215,7 +216,7 @@ ru:
         created_at: Дата одобрения
         updated_at: Дата изменения
       page:
-        permalink: Индификатор
+        permalink: Идентификатор
         created_at: Дата одобрения
         updated_at: Дата изменения
         text: Текст
