fix my ticket #9 Add to Article publication date

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -102,6 +102,7 @@ ru:
         updated_at: Дата обновления
         picture: Лого
         published: Опубликовать
+        publication_date: Дата публикации
       activity_comment:
         commentator: Комментатор
         content: Контент
