--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -1,6 +1,11 @@
 ru:
   activerecord:
     models:
+      creative_group:
+        one: Творческая группа
+        few: Творческая группа
+        many: Творческая группа
+        other: Творческая группа
       page:
         one: Страница
         few: Страницы
@@ -225,3 +230,8 @@ ru:
         created_at: Дата одобрения
         updated_at: Дата изменения
         text: Текст
+      creative_group:
+        name: Название
+        profession: Професия
+        description: Описание
+        avatar: Фото
