some work about activity, managers

--- a/config/locales/active_admin.ru.yml
+++ b/config/locales/active_admin.ru.yml
@@ -12,3 +12,4 @@ ru:
       published: Опубликованные
       not_published: Не опубликованные
       bests: Лучшие
+      managers: Менеджеры организаций
