--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -16,3 +16,7 @@ ru:
     other: '%{count} людей'
   yes: Да
   no: Нет
+  admin: Администратор
+  user: Пользователь
+  expert: Эксперт
+  manager: Менеджер организации
