Add ability to change user role and assing activity in admin/users

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -166,6 +166,7 @@ ru:
         password: Пароль
         created_at: Дата создания
         updated_at: Дата обновления
+        activity: Кружок
       activity_photo:
         attach: Фотография
       video_url:
