add inputs with images urls in admin/pictures

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -27,3 +27,7 @@ ru:
   friday: Пт.
   saturday: Сб.
   sunday: Вс.
+  picture:
+    thumb: 'Превью '
+    medium: 'Средняя '
+    original: 'Оригинал '
