stupid head, forgot localizaion field text in model Sponsor

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -221,6 +221,7 @@ ru:
         first_name: Имя
         last_name: Фамилия
         description: Описание
+        text: Полный текст
       activity_approval:
         activity: Кружок
         user: Кто одобрил
