gg.. Why I push every commit? Stupid head

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -222,6 +222,7 @@ ru:
         last_name: Фамилия
         description: Описание
         text: Полный текст
+        position: Позиция
       activity_approval:
         activity: Кружок
         user: Кто одобрил
