reduce sample data. Create photographer roles. Add it's to admin

--- a/config/locales/active_admin.ru.yml
+++ b/config/locales/active_admin.ru.yml
@@ -13,3 +13,4 @@ ru:
       not_published: Не опубликованные
       bests: Лучшие
       managers: Менеджеры организаций
+      photographers: Фотографы
