--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,8 @@ ru:
   user: Пользователь
   expert: Эксперт
   manager: Менеджер кружка
+  photographer: Фотограф
+  main_photographer: Главный фотограф
   monday: Пн.
   tuesday: Вт.
   wednesday: Ср.
