some fix for juniour photographers

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -22,6 +22,7 @@ ru:
   manager: Менеджер кружка
   photographer: Фотограф
   main_photographer: Главный фотограф
+  editor: Редактор
   monday: Пн.
   tuesday: Вт.
   wednesday: Ср.
