--- a/config/locales/active_admin.ru.yml
+++ b/config/locales/active_admin.ru.yml
@@ -14,3 +14,5 @@ ru:
       bests: Лучшие
       managers: Менеджеры организаций
       photographers: Фотографы
+      festival_photos: Фотографии для фестиваля
+      not_festival_photos: Общие фотографии
