--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -245,6 +245,7 @@ ru:
         created_at: Дата одобрения
         updated_at: Дата изменения
         text: Текст
+        year: Год
       creative_group:
         name: Название
         profession: Професия
