archive: add creative groups

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -251,6 +251,8 @@ ru:
         profession: Професия
         description: Описание
         avatar: Фото
+        year: Год
+        position: Позиция
       gallery_photo:
         id: ID
         photo_file_name: Название файла
