archive: add title to stage and clean :shit:-code

--- a/config/locales/active_records.ru.yml
+++ b/config/locales/active_records.ru.yml
@@ -288,6 +288,7 @@ ru:
       stage:
         year: Год
         category: Категория
+        title: Заголовок
         content: Содержание
         small_pic: Маленькая картинка
         large_pic: Большая картинка
